# src/main/java/org/example/api/hotel/service/HotelService.java
@@ -1,7 +1,7 @@
 package org.example.api.hotel.service;
 
 import org.example.api.hotel.dto.request.CreateHotelRequestDto;
-import org.example.api.hotel.dto.request.HotelSearchRequestDto;
+import org.example.api.hotel.dto.request.SearchHotelRequestDto;
 import org.example.api.hotel.dto.response.FullHotelInfoResponseDto;
 import org.example.api.hotel.dto.response.ShortHotelInfoResponseDto;
 import org.example.api.hotel.model.enums.HotelGroupingParameter;
@@ -18,7 +18,7 @@ public interface HotelService {
 
     FullHotelInfoResponseDto getHotelById(UUID id);
 
-    Page<ShortHotelInfoResponseDto> searchHotels(HotelSearchRequestDto request, Pageable pageable);
+    Page<ShortHotelInfoResponseDto> searchHotels(SearchHotelRequestDto request, Pageable pageable);
 
     Map<String, Long> countHotelsGroupedByParameter(HotelGroupingParameter param);
 }
